--- a/main.css
+++ b/main.css
@@ -89,8 +89,144 @@ button{
     top: 0;
     left: 0;
 }
+.features{
+    background-color: #fff;
+    padding: 115px 60px;
+}
+.cards{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 50px;
+}
+.card{
+    padding: 35px 40px 25px 40px;
+    border: 1px solid #D9E4E6;
+    border-radius: 5px;
+}
+.card p{
+    font-size: 16px;
+    line-height: 22px;
+    opacity: 0.8;
+}
+.card__logo{
+    width: 100px;
+    height: 100px;
+    font-size: 32px;
+    font-weight: 700;
+    background-color: #eaeff9;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.card__logo_yellow{
+    color: #ffb406;
+}
+.card__logo_red{
+    color: #ad1714;
+}
+.card__logo_green{
+    color: #22a030;
+}
 .form__container{
     width: 550px;
+}
+.features__border{
+    margin-top: 50px;
+    margin-bottom: 50px;
+    border: 1px solid #E6EAF4;
+}
+.features__feedback{
+    display: flex;
+    flex-direction: row;
+}
+.features__feedback-left{
+    margin-right: 10px;
+}
+.features__feedback-left h2{
+    font-size: 48px;
+}
+.features__feedback-left p{
+    font-size: 18px;
+    line-height: 26px;
+    opacity: 0.7;
+}
+.features__feedback-right{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.features__box{
+    padding: 30px 40px 25px 40px;
+    color: #fff;
+    border-radius: 25px;
+    height: 165px;
+}
+.features__box h3{
+    margin-top: 0;
+    margin-bottom: 20px;
+    font-size: 48px;
+}
+.features__savings-box{
+    background-color: #dc5e26;
+    box-shadow: 0 6px 0 rgb(221 95 38 / 20%);
+    margin-right: 30px;
+}
+.features__rate-box{
+    background-color: #1D263A;
+    box-shadow: 0 6px 0 rgb(29 38 58 / 20%);
+}
+.features__box .stars{
+    color: #ff7039;
+}
+.promo{
+    display: flex;
+    flex-direction: row;
+}
+.promo__image{
+    background-image: url(img/promo.jpg);
+    flex-shrink: 0;
+    background-size: cover;
+    background-position: center;
+    width: 50%;
+}
+.promo__right{
+    background-color: #dd5f26;
+    padding: 160px 60px;
+}
+.promo__card{
+    background-color: #fff;
+    padding: 30px 40px;
+    font-size: 20px;
+    line-height: 22px;
+    font-weight: 500;
+    border-radius: 25px;
+    display: flex;
+    flex-direction: column;
+}
+.promo__card p{
+    margin-top: 0;
+    opacity: 0.8;
+}
+.fa-circle{
+    color: #ec6b29;
+    font-size: 10px;
+    margin-right: 10px;
+}
+.promo__button{
+    display: inline-block;
+    margin: auto;
+}
+.promo__button button{
+    margin-top: 20px;
+    font-size: 18px;
+    padding: 15px 30px;
+    font-weight: 600;
+    background-color: #107b1c;
+}
+.fa-chevron-right{
+    font-size: 15px;
+    margin-left: 5px;
 }
 .form{
     background-color: #1D263A;
@@ -230,6 +366,42 @@ footer{
     }
     .about__image{
         width: 280px;
+    }
+    .features{
+        padding: 50px 10px;
+    }
+    .cards{
+        grid-template-columns: auto;
+    }
+    .features__feedback{
+        display: flex;
+        flex-direction: column;
+    }
+    .features__feedback-left{
+        margin-right: 0;
+    }
+    .features__feedback-left h2{
+        font-size: 36px;
+    }
+    .features__feedback-right{
+        flex-direction: column;
+        align-items: baseline;
+    }
+    .features__box h3{
+        font-size: 36px;
+    }
+    .features__savings-box{
+        margin-right: 0;
+        margin-bottom: 30px;
+    }
+    .promo{
+        flex-direction: column;
+    }
+    .promo__image{
+        height: 500px;
+    }
+    .promo__right{
+        padding: 50px 10px;
     }
     .form{
         padding: 50px 10px;
