--- a/main.css
+++ b/main.css
@@ -8,10 +8,17 @@ header{
     justify-content: space-between;
     align-items: center;
     padding: 20px;
-    position: sticky;
+    position: fixed;
+    left: 0;
+    right: 0;
     top: 0;
-    background-color: #fff;
+    background-color: transparent;
+    transition: 0.25s ease;
     z-index: 1;
+}
+.header__scrolled{
+    background-color: #fff;
+    box-shadow: 0 12px 34px -11px rgb(65 62 101 / 10%);
 }
 .header__logo{
     height: 30px;
@@ -41,7 +48,7 @@ button{
     display: flex;
     justify-content: space-around;
     align-items: center;
-    padding-top: 115px;
+    padding-top: 200px;
     padding-bottom: 115px;
     background: url("img/back.png") no-repeat;
     background-position: center;
@@ -327,7 +334,7 @@ footer{
 
 @media (max-width: 1024px){
     .about{
-        padding: 115px 20px;
+        padding: 120px 20px;
     }
     .about h1{
         font-size: 36px;
@@ -360,7 +367,7 @@ footer{
         height: 20px;
     }
     .about{
-        padding: 50px 10px;
+        padding: 100px 10px;
         flex-direction: column-reverse;
     }
     .about h1{
